--- a/cursoconvocatoria2025/css/style.css
+++ b/cursoconvocatoria2025/css/style.css
@@ -408,6 +408,14 @@ header{
     margin-block-end: 15px;
 }
 
+/*------------------ Explicación etapa 4------------------*/
+.information-op{
+    inline-size: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+}
+
 /*------------------Sección de pie de página------------------*/
 footer {
     background: var(--primary-color);
@@ -614,6 +622,11 @@ footer {
 }
 
 /*------------------ Vista para teléfonos ------------------*/
+@media (max-width: 1320px) {
+    .information-list li {
+        font-size: 18px;
+    }
+}
 @media (max-width: 1220px) {
 
     /*------------------Sección de etapas------------------*/
@@ -704,6 +717,17 @@ footer {
         position: relative;
         margin-block-start: 10px;
     }
+
+    .information-list li {
+        font-size: 15px;
+        padding-inline-start: 30px;
+    }
+
+    .information-list li::before {
+        inline-size: 20px;
+        block-size: 20px;
+        transform: translateY(0px);
+    }
 }
 
 @media (max-width: 700px) {
@@ -725,11 +749,23 @@ footer {
     .timeline{
         transform: translateX(-285px);
     }
+
+    .information-list {
+        inline-size: 90%;
+    }
+    .tarjet-description {
+        font-size: 18px;
+        inline-size: 80%;
+    }
 }
 
 @media (max-width: 620px) {
     .timeline{
         transform: translateX(-50%);
+    }
+
+    .inf-cont{
+        font-size: 15px;
     }
 }
 
@@ -755,5 +791,13 @@ footer {
     }
     .step-date{
         font-size: 13px;
+    }
+
+    .information-list li {
+        font-size: 15px;
+    }
+
+    .inf-cont{
+        font-size: 14px;
     }
 }
